# codename-vista

./: .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Codename Vista.csproj  Codename Vista.csproj.old.1  Codename Vista.sln  README.md  addons.jsonc  default_bus_layout.tres  editor_layouts.cfg  export_presets.cfg  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  ggg.toml  icon.svg.import  index.html  install.ps1  licenses.json  llms.md  mkdocs.yml  project.godot  pyproject.toml  setup.ps1  sitemap.xml
.config/: dotnet-tools.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  profanity.yaml  replace.yaml  test.yml
addons/local.editor_settings/: plugin.cfg  plugin.gd  plugin.gd.uid
addons/local.main_screen_buttons/: plugin.cfg  plugin.gd
areas/init/: init.tscn
assets/shaders/: simple_blur.gdshader.uid
blog/: index.html
docs/: index.md
file-system-layout/: index.html
ggs/: default_glyph_db.tres  default_text_db.tres  plugin_settings.tres
modules/: libraries.gd  libraries.gd.uid  t.gd  timeout.gd  timeout.gd.uid
nodes/: modal_popup.gd  modal_popup.gd.uid  model_binder.gd.uid  shader_controller.gd  shader_controller.gd.uid
resources/: scene_loader_taget.gd  scene_loader_taget.gd.uid
scripts/: dictionary_tools.gd  dictionary_tools.gd.uid  imports.js  t.gd.uid
search/: search_index.json
tasks/: utils.py
tests/: test_magic_smoke.gd  test_magic_smoke.gd.uid
tooling/: __main__.py  utils.py
tools/: cli.gd  cli.gd.uid  sync.gd  sync.gd.uid
views/: Button.tscn
(+6831 files in other folders)
